--- a/email/generic_message_template.mustache
+++ b/email/generic_message_template.mustache
@@ -58,7 +58,9 @@ body {
           <tbody>
             <tr style="font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; margin: 0; padding: 0;">
               <td style="font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 16px; vertical-align: top; color: #fff; font-weight: 500; text-align: center; border-radius: 3px 3px 0 0; background:#fff; margin: 0; padding: 20px;" align="center" valign="top">
-                <a href="https://{{server_name}}" target="_blank"><img src="https://storage.googleapis.com/camio_general/Generic-logo.png"></a>
+                <a href="https://{{server_name}}" target="_blank">
+                  {{product_name}}
+                </a>
               </td>
             </tr>
             <tr style="font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; margin: 0; padding: 0;">
@@ -69,22 +71,18 @@ body {
             <tr style="font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; margin: 0; padding: 0;">
             <td class="footer images" style="color: #fff; text-align: right; margin: 0; padding: 13px 20px 10px 20px;border-radius:6px;" align="right" valign="top">
               <div class="float:right; align-content: center;">
-                  <a style="padding-top:2px;" href="https://www.facebook.com/generic" target="_blank"><img src="https://video.generic.com/images/email/email-fbook.jpg"></a>
-                  <a style="padding-top:2px;" href="https://plus.google.com/+generic/about" target="_blank"><img src="https://video.generic.com/images/email/email-gplus.jpg"></a>
-                  <a style="padding-top:2px;" href="https://twitter.com/generic" target="_blank"><img src="https://video.generic.com/images/email/email-twitter.jpg"></a>
              </div>
             </td>
             </tr>
           </tbody>
-        </table>
-        
+        </table>        
       
       
        <div class="footer" style="font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; width: 100%; clear: both; color: #999; margin: 0; padding-top: 20px;">
           <table width="100%" style="font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; margin: 0; padding: 0;">
             <tbody>
               <tr style="font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; margin: 0; padding: 0;">
-                <td style="font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 10px; line-height: 1em; color: #999; font-weight: 500;text-align: center; margin:5px 0px;" align="left" valign="top">&copy; {{copyright_year}} Generic, Inc.<br>866-555-1212, Anywhere, USA
+                <td style="font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 10px; line-height: 1em; color: #999; font-weight: 500;text-align: center; margin:5px 0px;" align="left" valign="top">&copy; {{copyright_year}}
                 </td>
               </tr>
               <tr>
